--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ const App = () => {
                   Cada ponto no mapa representa uma esperança. Ajude a trazer alguém de volta para casa.
                 </p>
                 
-                <a href="Find-me.png" download className="block mt-6 w-fit">
+                <a href="encontrame.apk" download className="block mt-6 w-fit">
                 <div class="button" data-tooltip="Size: 20Mb">
                 <div class="button-wrapper">
                   <div class="text">Baixar</div>
